[package]
name = "kademlia-dht"
version = "1.0.0"
readme = "README.md"
description = """
A simple implementation of the Kademlia DHT.
"""
categories = ["algorithms", "concurrency", "data-structures"]
keywords = ["kademlia", "dht"]
include = ["src/**/*", "Cargo.toml"]
edition = "2018"

[dependencies]
bincode = "0.9"
log = "0.4"
rand = "0.8.5"
serde = "1.0"
serde_derive = "1.0"
sha3 = "0.7"
simplelog = "0.5"
time = "0.1"
clap = {version="4.0.32",features=["derive"]}
hex="*"
lazy_static = "1.4.0"
flexi_logger = {version="0.25.5",features=["compress"]}

[dev-dependencies]
num-bigint = "0.1"
